# appdroid-microservices-manager

./: .gitignore  LICENSE  README.md  docker-compose.yml  launcher.py  pyproject.toml
app/: database.py  main.py  models.py  worker_cli.py
app/api/: endpoints.py
app/core/: manager.py
app/kafka/: consumer.py  producer.py
app/services/: execution.py  mdns.py  status.py  system.py  workspace.py
static/: en.html  es.html  index.html
static/css/: styles.css
static/js/: dashboard.js
