[project]
name = "appdroid-microservices-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "AppDroid",email = "dev@appdroid.io"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "kafka-python (>=2.2.15,<3.0.0)",
    "stomp-py (>=8.2.0,<9.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "aiokafka (>=0.12.0,<0.13.0)"
]

[tool.poetry]
packages = [{include = "appdroid_microservices_manager", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
